--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,9 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
+do.jlink=false
+file.reference.jcalendar-1.4.jar=C:\\Users\\Zelbag\\Documents\\NetBeansProjects\\RefugioCandelaria\\libraries\\jcalendar-1.4.jar
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=C:\\Users\\Zelbag\\AppData\\Roaming\\NetBeans\\12.3\\build.properties
