--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,7 +2,7 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.jcalendar-1.4.jar=C:\\Users\\Zelbag\\Documents\\NetBeansProjects\\RefugioCandelaria\\libraries\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\Zelbag\\Documents\\NetBeansProjects\\candelaria 2.0\\RefugioCandelaria\\libraries\\jcalendar-1.4.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
